--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.8.1
+certifi==2024.12.14
+charset-normalizer==3.4.0
 Django==5.1.4
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+idna==3.10
 psycopg==3.2.3
 psycopg-binary==3.2.3
 python-dotenv==1.0.1
+requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.12.2
+urllib3==2.2.3
